@@ -475,6 +475,8 @@ class OutputPage {
 		$this->mLanguageLinks += $parserOutput->getLanguageLinks();
 		$this->addCategoryLinks( $parserOutput->getCategories() );
 		$this->mNewSectionLink = $parserOutput->getNewSection();
+		# FIXME: This probably overrides $wgArticleRobotPolicies, is that wise?
+		$this->setIndexPolicy( $parserOutput->getIndexPolicy() );
 		$this->addKeywords( $parserOutput );
 		$this->mParseWarnings = $parserOutput->getWarnings();
 		if ( $parserOutput->getCacheTime() == -1 ) {
